--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "dbpedia-rest-app",
+  "name": "dumb-questions-to-sparql",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
